--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -28,5 +28,5 @@ akka {
 clustering {
   port = 2551
   port = ${?CLUSTER_PORT}
-  cluster.name = polyu-data-mining-2016-application
+  cluster.name = data-mining-youtube
 }
