changed cluster name from youtube to pamap2

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -28,5 +28,5 @@ akka {
 clustering {
   port = 2551
   port = ${?CLUSTER_PORT}
-  cluster.name = data-mining-youtube
+  cluster.name = data-mining-pamap2
 }
