building actor for computational task distributing

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,7 +2,7 @@ akka {
 
   log-dead-letters = 1
   log-dead-letters-during-shutdown = off
-  loglevel = debug
+  loglevel = info
   
   actor {
     provider = "akka.cluster.ClusterActorRefProvider"
