added ui mode --ui in argument; added backup (remote) database usage if database is not started at localhost

--- a/src/main/resources/database.conf
+++ b/src/main/resources/database.conf
@@ -1,5 +1,5 @@
 rethinkdb {
-  // host = "58.96.176.223"
+  backup_host = "58.96.176.223"
   host = "localhost"
   port = 28015
   dbname = "pamap2"
