implemented seed lookup from database

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -27,6 +27,7 @@ akka {
 
 clustering {
   port = 2551
+  // may be overwrite by built.sbt or runtime
   port = ${?CLUSTER_PORT}
   cluster.name = data-mining-pamap2
 }
