--- a/src/main/resources/node.seed.conf
+++ b/src/main/resources/node.seed.conf
@@ -1,4 +1,8 @@
 akka.cluster {
-  seed-nodes += "akka.tcp://"${clustering.cluster.name}"@"${clustering.ip}":"${clustering.port}
   roles = [seed]
+}
+
+clustering {
+  port = 2551
+  port = ${?CLUSTER_PORT}
 }
