actively removed dead compute node and workers

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -30,4 +30,8 @@ clustering {
   // may be overwrite by built.sbt or runtime
   port = ${?CLUSTER_PORT}
   cluster.name = data-mining-pamap2
+  report {
+    interval = 1000
+    timeout = 10000
+  }
 }
