added virtual network helper to test

--- a/src/main/resources/node.compute.conf
+++ b/src/main/resources/node.compute.conf
@@ -6,3 +6,12 @@ clustering {
   port = 2552
   port = ${?CLUSTER_PORT}
 }
+
+virtualnetwork {
+  host {
+    port = 2554
+  }
+  guest {
+    port = 2555
+  }
+}
