--- a/src/main/resources/node.compute.conf
+++ b/src/main/resources/node.compute.conf
@@ -7,6 +7,11 @@ clustering {
   port = ${?CLUSTER_PORT}
 }
 
+compute {
+  // 0 for max, >1 for specific number of processor
+  number_of_worker = 2
+}
+
 virtualnetwork {
   host {
     port = 2554
