changed database ip

--- a/src/main/resources/database.conf
+++ b/src/main/resources/database.conf
@@ -1,5 +1,6 @@
 rethinkdb {
-  backup_host = "58.96.176.223"
+  backup_host_a = "58.96.176.223"
+  backup_host = "128.199.97.91"
   host = "localhost"
   port = 28015
   dbname = "pamap2"
