--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,7 +3,7 @@ akka {
   log-dead-letters = 1
   log-dead-letters-during-shutdown = off
   loglevel = info
-  
+
   actor {
     provider = "akka.cluster.ClusterActorRefProvider"
     debug {
@@ -11,7 +11,7 @@ akka {
       lifecycle = off
     }
   }
-  
+
   remote {
     netty.tcp {
       hostname = ${clustering.ip}
@@ -39,6 +39,25 @@ clustering {
 algorithm {
   task {
     max = 10
+  }
+  som {
+    weights = [
+      2, // IMUField.temperature.toString
+      1, // IMUField.a16x.toString
+      1, // IMUField.a16y.toString
+      1, // IMUField.a16z.toString
+      1, // IMUField.a6x.toString
+      1, // IMUField.a6y.toString
+      1, // IMUField.a6z.toString
+      2, // IMUField.rx.toString
+      2, // IMUField.ry.toString
+      2, // IMUField.rz.toString
+      1, // IMUField.mx.toString
+      1, // IMUField.my.toString
+      1 // IMUField.mz.toString
+    ],
+    gridWidth: 100,
+    gridHeight: 100
   }
 }
 
