added laptop ip

--- a/src/main/resources/database.conf
+++ b/src/main/resources/database.conf
@@ -2,7 +2,8 @@ rethinkdb {
   backup_host_aliyun = "58.96.176.223"
   backup_host_janus = "128.199.97.91"
   backup_host_polyu = "158.132.8.147"
-  backup_host = "158.132.8.147"
+  backup_host_laptop = "175.159.10.181"
+  backup_host = "175.159.10.181"
   host = "localhost"
   port = 28015
   dbname = "pamap2"
