--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -55,8 +55,8 @@ algorithm {
       1, // IMUField.mx.toString
       1, // IMUField.my.toString
       1 // IMUField.mz.toString
-    ],
-    gridWidth: 30,
+    ]
+    gridWidth: 30
     gridHeight: 30
   }
 }
