updating SOM approach
to train each part individually (to avoid scaling problem)

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -41,23 +41,21 @@ algorithm {
     max = 10
   }
   som {
-    weights = [
-      2, // IMUField.temperature.toString
-      1, // IMUField.a16x.toString
-      1, // IMUField.a16y.toString
-      1, // IMUField.a16z.toString
-      1, // IMUField.a6x.toString
-      1, // IMUField.a6y.toString
-      1, // IMUField.a6z.toString
-      2, // IMUField.rx.toString
-      2, // IMUField.ry.toString
-      2, // IMUField.rz.toString
-      1, // IMUField.mx.toString
-      1, // IMUField.my.toString
-      1 // IMUField.mz.toString
-    ]
-    gridWidth: 30
-    gridHeight: 30
+    imuPart {
+      gridWidth: 10
+      gridHeight: 10
+      minChange: 0.01
+    }
+    heartRate {
+      gridWidth: 5
+      gridHeight: 5
+      minChange: 0.01
+    }
+    temperature {
+      gridWidth: 6
+      gridHeight: 6
+      minChange: 0.01
+    }
   }
 }
 
