--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -49,11 +49,36 @@ algorithm {
     heartRate {
       gridWidth: 5
       gridHeight: 5
+      initMin: 40
+      initMax: 200
       minChange: 0.01
     }
     temperature {
       gridWidth: 6
       gridHeight: 6
+      minChange: 0.01
+    }
+    // kg
+    weight {
+      gridWidth: 3
+      gridHeight: 3
+      initMin: 50
+      initMax: 100
+      minChange: 0.01
+    }
+    // cm
+    height {
+      gridWidth: 3
+      gridHeight: 3
+      initMin: 150
+      initMax: 200
+      minChange: 0.01
+    }
+    age {
+      gridWidth: 3
+      gridHeight: 3
+      initMin: 20
+      initMax: 35
       minChange: 0.01
     }
   }
