added some min max in som config

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -44,6 +44,8 @@ algorithm {
     imuPart {
       gridWidth: 10
       gridHeight: 10
+      initMin: -255
+      initMax: 255
       minChange: 0.01
     }
     heartRate {
@@ -56,6 +58,8 @@ algorithm {
     temperature {
       gridWidth: 6
       gridHeight: 6
+      initMin: 25
+      initMax: 40
       minChange: 0.01
     }
     // kg
