disabled pendingTaskCount in dispatcher

--- a/src/main/resources/node.compute.conf
+++ b/src/main/resources/node.compute.conf
@@ -8,8 +8,8 @@ clustering {
 }
 
 compute {
-  // 0 for max, >1 for specific number of processor
-  number_of_worker = 0
+  // 0 for max, >= 1 for specific number of processor
+  number_of_worker = 1
 }
 
 virtualnetwork {
